@@ -1,6 +1,9 @@
 dpkg (1.17.16) UNRELEASED; urgency=low
 
   * Set the copyright holder in the po4a calls for man pages.
+  * Switch remaining topic to named variable in Dpkg::Source::Patch:analyze(),
+    otherwise the loop was expecting values in one variable but storing them
+    in another. Regression introduced in dpkg 1.17.14. Closes: #764206
 
  -- Guillem Jover <guillem@debian.org>  Mon, 06 Oct 2014 03:37:15 +0200
 
